[tool.poetry]
name = "codespace-algorand"
version = "0.1.0"
description = ""
authors = ["Akinsanya Daniel Oluwatomiwa <akinsanyadaniel665@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
